--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "back": "cd backend && npm start",
-      "front": "cd frontend && npm start",
-      "start": "concurrently --kill-others-on-fail --names \"backend,frontend\" \"npm run back\" \"npm run front\"",
-      "postinstall":"cd frontend && npm install && cd .. && cd backend && npm install"
-    },
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "back": "cd backend && npm start",
+    "front": "cd frontend && npm start",
+    "start": "concurrently --kill-others-on-fail --names \"backend,frontend\" \"npm run back\" \"npm run front\"",
+    "postinstall": "cd frontend && npm install && cd .. && cd backend && npm install"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/taporian/Syker.git"
@@ -22,6 +21,9 @@
   },
   "homepage": "https://github.com/taporian/Syker#readme",
   "dependencies": {
-    "concurrently": "^6.2.0"
+    "axios": "^0.21.1",
+    "concurrently": "^6.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
