--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
     "build:build": "babel src --out-dir ./build --source-maps",
     "build": "npm run build:clean && npm run build:build",
     "production": "node ./build/index.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +31,7 @@
     "http-errors": "^1.8.0",
     "mongoose": "^5.13.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.2",
     "rimraf": "^3.0.2",
     "serve-favicon": "^2.5.0"
   },
