--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "concurrently": "^6.2.0",
+    "ejs": "^3.1.6",
+    "multer": "^1.4.2",
+    "path": "^0.12.7",
+    "react-file-base64": "^1.0.3",
+    "react-icons": "^4.2.0",
+    "react-image-gallery": "^1.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   }
