--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.2.4",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.3.0"
   }
 }
