--- a/backend/package.json
+++ b/backend/package.json
@@ -23,17 +23,20 @@
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
     "@babel/register": "^7.14.5",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
     "rimraf": "^3.0.2",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
