--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^6.2.0",
     "ejs": "^3.1.6",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
     "path": "^0.12.7",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.2.0",
