--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemailer": "^6.6.3",
     "path": "^0.12.7",
     "react-file-base64": "^1.0.3",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.2.4",
     "react-router": "^5.2.0",
